LU-77 cl_page.c::cl_page_own0() assertion in echoclient

There is no lock for echo_page, it is easy to hit this issue
when obdfilter_survey is doing IO in parallel.

Change-Id: I4bacb5a72afd7bad68bdabf5a64d711e34b5ea3c
Signed-off-by: Jinshan Xiong <jay@whamcloud.com>